improve vote creation, fix Segmented
- vote creation: autosizing page view (with horizontal scrolling) breaks
  codemirror layout
- vote creation: replace json editors with json filter editors so
  pasting filters with templating doesn't break
- the Segmented component's animated background was misaligned

--- a/src/fe/components/controls/segmented.less
+++ b/src/fe/components/controls/segmented.less
@@ -1,6 +1,7 @@
 @import '../../prelude';
 
 .segmented-control {
+    position: relative;
     display: inline-flex;
     align-items: stretch;
     border-radius: 4px;
